[GSA-10] Stats Calculation (#12)
* Starting some core stats service retasking

* Functioning example of reading redis connection info from application.properties, needs cleanup

* Clean up autowiring

* Fix test with test property overrides

* Done refactoring approach summaries (for now)

* Refactor/fix approach stats computations

* First mapping for new stats api endpoint

* Some constructor bug fixes, support for returning Redis key with golf round, added latest shots endpoint

* Move remnants of csv output api to generic JSON stats API

* change CSV/JSON parsing approach and remote stats api value supplier

* Finish implementing media type conversion on stats api

* Apparently using standard ports (plus link) enables service to service communication

* Clean up superflous classes and unit tests